@@ -8,7 +8,7 @@
 #####ECOSGPLCOPYRIGHTBEGIN####
 ## -------------------------------------------
 ## This file is part of eCos, the Embedded Configurable Operating System.
-## Copyright (C) 2008, 2009, 2010 Free Software Foundation
+## Copyright (C) 2008, 2009, 2010, 2011 Free Software Foundation
 ##
 ## eCos is free software; you can redistribute it and/or modify it under
 ## the terms of the GNU General Public License as published by the Free
@@ -48,6 +48,7 @@
 cdl_package CYGPKG_NET_LWIP {
     display         "lwIP networking stack"
     description     "The lightweight TCP/IP stack."
+    requires        CYGPKG_ISOINFRA
     requires        CYGINT_ISO_ERRNO_CODES
 	
     compile         core/dns.c                  \
